--- a/app/src/components/DashBoards/CommDashboard.css
+++ b/app/src/components/DashBoards/CommDashboard.css
@@ -1,8 +1,17 @@
 .ticket_div{
-    border: 1px solid rgb(28, 119, 255);
+    border: none;
+    background-color: rgb(113, 162, 236);
+    color: white;
+    padding: 10px;
+    margin: 5px;
     
     border-radius: 5px;
     
+}
+
+.ticket_div:hover{
+    scale: 1.05;
+    transition: 0.5s;
 }
 
 .org-names-customer button{
@@ -46,4 +55,38 @@
     margin:2px;
     padding: 1rem;
     border-radius: 8px;
+}
+
+.commdash_header{
+    display: flex;
+    justify-content: space-between;
+}
+
+.ticket_buttons{
+    display: flex;
+    column-gap: 1rem;
+}
+
+.ticket_header{
+    display: flex;
+    justify-content: space-between;
+}
+
+.ticket_count{
+    width: 1.5rem;
+    height: 1.5rem;
+    display: flex;
+    justify-content: center;
+    background-color: rgb(39, 119, 240);
+    color: white;
+    border-radius: 1rem;
+}
+
+.ticket_count:hover{
+    transition: 0.7s;
+    scale: 1.1;
+}
+
+hr{
+   border-top: 0.5px solid grey; 
 }
