--- a/app/src/components/MainPage.css
+++ b/app/src/components/MainPage.css
@@ -1,6 +1,6 @@
 .main-page {
     display: flex;
-    flex-direction:row;
+    flex-direction:column;
     justify-content: center;
     align-items: center;
     
@@ -29,4 +29,27 @@
 
 .nav-link:hover{
     text-decoration: underline;
+}
+
+.content-div{
+    
+    width: 40rem;
+    height: 15rem;
+    margin: 1.5rem;
+    border-radius: 5px;
+    border: 1px solid rgb(39, 119, 240);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+
+}
+
+.content-div a{
+    text-decoration: none;
+    background-color: #7FB5FF;
+    font-size: x-large;
+    padding: 0.7rem;
+    border-radius: 25px;
+    color: white;
 }
